--- a/app/assets/stylesheets/jednotka/theme/structure/_content.scss
+++ b/app/assets/stylesheets/jednotka/theme/structure/_content.scss
@@ -59,7 +59,7 @@ body.boxed {
     &.fade.in {
       &:hover {
         border-color: darken($medium-light, 10%);
-        background-color: lighten($very-light, 2%);
+        background-color: gray;
       }
     }
   }
