--- a/app/assets/stylesheets/jednotka/theme/structure/_footer.scss
+++ b/app/assets/stylesheets/jednotka/theme/structure/_footer.scss
@@ -145,7 +145,7 @@
   }
 
   #footer-copyright {
-    background-color: $body-bg;
+    background-color: #353b47;
     color: gray;
     padding: 20px 0;
     text-align: center;
