--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -22,6 +22,7 @@
 /* Navbar logo */
 .navbar-wagon-brand img {
   width: 50px;
+  margin-top: 10px;
 }
 
 /* Navbar right section (with form, links, button) */
