--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
 // jednotka files
 @import "jednotka/bootstrap/bootstrap.min";
 
-@import "jednotka/jednotka_green";
+@import "jednotka/jednotka_blue";
 //customize contrast color
 //$contrast: #01a9e0;
 //@import "jednotka/jednotka";
