--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,62 +3,22 @@
 
       <div id='main' role='main'>
         <!-- / carousel blur -->
-        <div class='hero-carousel carousel-blur carousel-blur-arrows carousel-blur-pagination flexslider fade-loading' id='carousel-example-1'>
-          <ul class='slides'>
-            <li class='item'>
-              <div class='container'>
-                <div class='row'>
-                  <div class='col-lg-12 animate'>
-                    <h1 class='big fadeInUp animated'>
-                      Fully responsive
-                      &amp;
-                      Retina ready
-                    </h1>
-                    <p class='normal fadeInUp animated'>Proin facilisis aliquam nunc quis varius.</p>
-                    <a class='btn btn-contrast btn-lg fadeInRight animated' href='#'>
-                      Show more
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li class='item'>
-              <div class='container'>
-                <div class='row'>
-                  <div class='col-lg-12 animate'>
-                    <h2 class='big fadeInLeftBig animated'>
-                      Clean, flat
-                      &amp;
-                      polished design
-                    </h2>
-                    <p class='normal fadeInRightBig animated'>Sed felis ligula, eleifend at neque eget.</p>
-                    <a class='btn btn-contrast btn-lg fadeInDownBig animated' href='#'>
-                      Show more
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li class='item'>
-              <div class='container'>
-                <div class='row'>
-                  <div class='col-lg-12 animate'>
-                    <h2 class='big fadeInRightBig animated'>Based on Twitter Bootstrap</h2>
-                    <p class='normal fadeInLeftBig animated'>Nam nec tellus molestie, sollicitudin, at...</p>
-                    <a class='btn btn-contrast btn-lg fadeInUpBig animated' href='#'>
-                      Show more
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
+
+
+       <div class="banner" style="background-image: linear-gradient(-210deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path 'at/dive.jpg'%>');">
+         <div>
+
+            <h1 class='big fadeInRightBig animated'>Academia Translations</h2>
+             <p class='normal fadeInLeftBig animated'> Fast, accurate and reliable translations by experts linguists </p>
+         </div>
+       </div>
+
+
         <div id='main-content'>
           <div class='container'>
             <div class='row'>
               <div class='col-sm-12'>
-                <p class='lead lead-lg text-center'>Quisque nunc sapien, malesuada vitae luctus in, blandit eu erat. Cras fringilla eros eget justo dictum convallis.</p>
+                <p class='lead lead-lg text-center'>Devil is on the detail, maximise your business potential with a certified interpreter</p>
               </div>
             </div>
             <div class='panels-wrapper'>
@@ -70,7 +30,7 @@
                     </div>
                     <div class='panel-heading'><img class="img-responsive-sm" alt="Project planning" width="768" height="300" src="http://placehold.it/768x300" /></div>
                     <div class='panel-body'>
-                      <h3 class='panel-title'>Project planning</h3>
+                      <h3 class='panel-title'>Language is an instrument of communication</h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu pharetra felis.est.</p>
                     </div>
                   </a>
@@ -82,7 +42,7 @@
                     </div>
                     <div class='panel-heading'><img class="img-responsive-sm" alt="Easy customizable" width="768" height="300" src="http://placehold.it/768x300" /></div>
                     <div class='panel-body'>
-                      <h3 class='panel-title'>Easy customizable</h3>
+                      <h3 class='panel-title'>Convey the right message</h3>
                       <p>Etiam init rutrum ligula semper neque relu dapibus, non tempus mauris sodales.est.</p>
                     </div>
                   </a>
@@ -94,7 +54,7 @@
                     </div>
                     <div class='panel-heading'><img class="img-responsive-sm" alt="Fastest workers" width="768" height="300" src="http://placehold.it/768x300" /></div>
                     <div class='panel-body'>
-                      <h3 class='panel-title'>Fastest workers</h3>
+                      <h3 class='panel-title'>Use the right tools </h3>
                       <p>Pellentesque id neque sit amet nibh placerat suscipit et a purus, mauris id.</p>
                     </div>
                   </a>
