--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 
 
-      <header id='header'>
+      <header id='header-jordi'>
         <div class='container'>
           <nav class='navbar navbar-collapsed-sm navbar-default' id='nav' role='navigation'>
             <div class='navbar-header'>
