--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,17 +1,13 @@
 
       <div id='main' role='main'>
-        <div id='main-content-header'>
-          <div class='container'>
-            <div class='row'>
-              <div class='col-sm-12'>
-                <h1 class='title'>
-                  About us
-                  <small>Nam porta lectus a sodales pulvinar. Morbi sed auctor magna.</small>
-                </h1>
-              </div>
-            </div>
+
+        <div class="banner-small" style="background-image: linear-gradient(-210deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path 'london.jpg'%>');">
+          <div>
+
+             <h1 class='big fadeInRightBig animated'>About us</h2>
           </div>
         </div>
+
         <div id='main-content'>
           <div class='container'>
             <div class='row'>
@@ -24,7 +20,21 @@
                 </div>
                 <div class='row'>
                   <div class='col-sm-12'>
-                    <p class='lead lead-xs text-center'>Suspendisse dignissim in sem eget pulvinar. Mauris aliquam nulla at libero pretium, eu tincidunt nulla molestie. Cras pulvinar posuere massa sed scelerisque.  Nam porta ac turpis id dapibus. Morbi facilisis eu nibh pulvinar convallis. Proin rutrum nisi ante, eu fringilla metus aliquam non. Vestibulum posuere, mauris sit amet.</p>
+                    <p class='lead lead-xs text-center'>
+
+                    Academia Translations offers a fast and expert translation service that you can depend upon. <br/>
+
+                    Our translators are academics with experience in the field in which they work. We endeavour to not only translate, but also transmit, the message you wish to convey, in the way you wish to do so. <br />
+
+
+
+                    Based in London, Academia Translations offers specialist translations of the highest quality and a personalised service to all our clients. We believe that a profound knowledge of the subject matter and the way language works are essential components to a good translation.<br />
+
+
+
+                    Academia Translations' Director, Olivia Cockburn (BA Hons, MA, MA, PhD, MCIL, MITI), is a member of the Classical Association, the American Philological Association, the Institute of Classical Studies, the Anglo-Spanish Society, an elected member of the Philological Society, a full member of the Chartered Institute of Linguists and a qualified member of the Institute of Translation and Interpreting.
+                    </p>
+
                   </div>
                 </div>
               </div>
