--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,8 +30,8 @@
                     </div>
                     <div class='panel-heading'><img class="img-responsive-sm" alt="Project planning" width="768" height="300" src="http://placehold.it/768x300" /></div>
                     <div class='panel-body'>
-                      <h3 class='panel-title'>Language is an instrument of communication</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu pharetra felis.est.</p>
+                      <h3 class='panel-title'> 100% Quality </h3>
+                      <p>Language is the instrument of communication, ensure its quality</p>
                     </div>
                   </a>
                 </div>
