--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
             <div class='row'>
               <div class='col-md-3 col-sm-6 info-box'>
                 <div class='logo-container'>
-                  <img alt="Jednotka" width="117" height="39" src="assets/images/logo.svg" />
+                  <img alt="Jednotka" width="117" height="39" src="assets/images/at/logo_at.jpg" />
                 </div>
                 <p class='no-mg-b'>Integer vulputate porta augue, sit amet interdum tellus commodo et. Sed volutpat neque vel turpis ultrices sini bibendum. Aliquam quis malesuada.</p>
               </div>
