--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 
       <div id='main' role='main'>
 
-        <div class="banner-small" style="background-image: linear-gradient(-210deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path 'london.jpg'%>');">
+        <div class="banner-small" style="background-image: linear-gradient(-210deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path 'at/london.jpg'%>');">
           <div>
 
              <h1 class='big fadeInRightBig animated'>About us</h2>
@@ -13,26 +13,25 @@
             <div class='row'>
               <div class='col-sm-12'>
                 <div class='page-header page-header-with-icon no-mg-t'>
-                  <i class='fa fa-tag'></i>
                   <h2>
                     Who we are
                   </h2>
                 </div>
                 <div class='row'>
                   <div class='col-sm-12'>
-                    <p class='lead lead-xs text-center'>
+                    <p class='lead lead-xs'>
 
                     Academia Translations offers a fast and expert translation service that you can depend upon. <br/>
+                    <br/>
 
                     Our translators are academics with experience in the field in which they work. We endeavour to not only translate, but also transmit, the message you wish to convey, in the way you wish to do so. <br />
+                    <br/>
 
 
 
                     Based in London, Academia Translations offers specialist translations of the highest quality and a personalised service to all our clients. We believe that a profound knowledge of the subject matter and the way language works are essential components to a good translation.<br />
-
-
-
-                    Academia Translations' Director, Olivia Cockburn (BA Hons, MA, MA, PhD, MCIL, MITI), is a member of the Classical Association, the American Philological Association, the Institute of Classical Studies, the Anglo-Spanish Society, an elected member of the Philological Society, a full member of the Chartered Institute of Linguists and a qualified member of the Institute of Translation and Interpreting.
+                    <br/>
+.
                     </p>
 
                   </div>
@@ -60,9 +59,9 @@
                           </a>
                         </div>
                         <div class='col-sm-8'>
-                          <h3 class='name'>David Doe</h3>
-                          <h4 class='position'>Product manager</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dictum varius ipsum,</p>
+                          <h3 class='name'>Olivia Cockburn (BA Hons, MA, MA, PhD, MCIL, MITI)</h3>
+                          <h4 class='position'>Manager Director</h4>
+                          <p>member of the Classical Association, the American Philological Association, the Institute of Classical Studies, the Anglo-Spanish Society, an elected member of the Philological Society, a full member of the Chartered Institute of Linguists and a qualified member of the Institute of Translation and Interpreting.</p>
                           <div class='links'>
                             <a class='btn btn-medium-light btn-sm btn-circle' href='#'>
                               <i class='fa fa-twitter'></i>
