--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -36,8 +36,8 @@
   text-align: center;
   height: 400px;
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
-  background-size: cover !important;
-  background-position: right 0px bottom 0px;
+  background-size: cover ;
+  background-position: right 0px bottom -50px;
 
   display: flex;
   align-items: center;
