--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -12,7 +12,7 @@
           <div class='container'>
             <div class='row'>
               <div class='col-sm-12'>
-                <div class='page-header page-header-with-icon no-mg-t'>
+                <div class='page-header-with-icon no-mg-t'>
                   <h2>
                     Who we are
                   </h2>
