--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,7 +3,6 @@
 
         <div class="banner-small" style="background-image: linear-gradient(-210deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path 'at/london.jpg'%>');">
           <div>
-
              <h1 class='big fadeInRightBig animated'>About us</h2>
           </div>
         </div>
@@ -12,15 +11,16 @@
           <div class='container'>
             <div class='row'>
               <div class='col-sm-12'>
-                <div class='page-header-with-icon no-mg-t'>
+                <div class='text-center'>
                   <h2>
-                    Who we are
+                    WHO WE ARE
                   </h2>
                 </div>
                 <div class='row'>
                   <div class='col-sm-12'>
                     <p class='lead lead-xs'>
-
+                    <br/>
+                    <br/>
                     Academia Translations offers a fast and expert translation service that you can depend upon. <br/>
                     <br/>
 
@@ -29,8 +29,10 @@
 
 
 
-                    Based in London, Academia Translations offers specialist translations of the highest quality and a personalised service to all our clients. We believe that a profound knowledge of the subject matter and the way language works are essential components to a good translation.<br />
+                    Based in London, Academia Translations offers specialist translations of the highest quality and a personalised service to all our clients. We believe that a profound knowledge of the subject matter and the way language works are essential components to a good translation. <br/>
                     <br/>
+
+                    Academia Translations' Director, Olivia Cockburn (BA Hons, MA, MA, PhD, MCIL, MITI), is a member of the Classical Association, the American Philological Association, the Institute of Classical Studies, the Anglo-Spanish Society, an elected member of the Philological Society, a full member of the Chartered Institute of Linguists and a qualified member of the Institute of Translation and Interpreting.
 .
                     </p>
 
@@ -59,11 +61,11 @@
                           </a>
                         </div>
                         <div class='col-sm-8'>
-                          <h3 class='name'>Olivia Cockburn (BA Hons, MA, MA, PhD, MCIL, MITI)</h3>
+                          <h3 class='name'>Olivia Cockburn</h3>
                           <h4 class='position'>Manager Director</h4>
-                          <p>member of the Classical Association, the American Philological Association, the Institute of Classical Studies, the Anglo-Spanish Society, an elected member of the Philological Society, a full member of the Chartered Institute of Linguists and a qualified member of the Institute of Translation and Interpreting.</p>
+                          <p> Praesent eu placerat enim, vitae condimentum arcu. Aenean ac semper purus.</p>
                           <div class='links'>
-                            <a class='btn btn-medium-light btn-sm btn-circle' href='#'>
+                            <a class='btn btn-medium-light btn-sm btn-circle' href='https://uk.linkedin.com/in/olivia-cockburn-5662a122/en'>
                               <i class='fa fa-twitter'></i>
                             </a>
                             <a class='btn btn-medium-light btn-sm btn-circle' href='#'>
@@ -160,16 +162,15 @@
                 <div class='page-header page-header-with-icon'>
                   <i class='fa fa-certificate'></i>
                   <h2>
-                    Our top clients
-                    <small>Aliquam placerat, nunc non ullamcorper rutrum, odio urna aliquam dui, a scelerisque purus dui et libero.</small>
+                    Partners
                   </h2>
                 </div>
                 <div class='row'>
                   <div class='col-sm-12'>
                     <div class='client-slideshow cycle-slideshow' data-cycle-carousel-fluid='true' data-cycle-fx='carousel' data-cycle-timeout='2000'>
+                      <img alt="" height="140" src='<%= image_path 'at/chartered.jpg'%>' />
+                      <img alt="" height="140" src='<%= image_path 'at/MITI.jpg'%>' />
                       <img alt="" width="140" height="33" src="http://placehold.it/140x33" />
-                      <img alt="" width="140" height="33" src="http://placehold.it/140x33" />
-                      <img alt="" width="140" height="26" src="http://placehold.it/140x26" />
                       <img alt="" width="139" height="32" src="http://placehold.it/139x32" />
                       <img alt="" width="151" height="28" src="http://placehold.it/151x28" />
                       <img alt="" width="31" height="38" src="http://placehold.it/31x38" />
