--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -1,29 +1,154 @@
+
 <div id='main' role='main'>
-  <div id='main-content-header'>
-    <div class='container'>
-      <div class='row'>
-        <div class='col-sm-12'>
-          <h1 class='title'>
-            Services
-            <small>Vivamus bibendum hendrerit metus.</small>
-          </h1>
-        </div>
-      </div>
+
+  <div class="banner-small" style="background-image: linear-gradient(-210deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path 'at/puzzle.jpg'%>');">
+    <div>
+       <h1 class='big fadeInRightBig animated'>Services</h2>
     </div>
   </div>
+
   <div id='main-content'>
     <div class='container'>
       <div class='row'>
         <div class='col-sm-12'>
-          <div class='page-header page-header-with-icon no-mg-t'>
-            <i class='fa fa-briefcase'></i>
+          <div class='text-center'>
             <h2>
-              Top services
-              <small>Mauris feugiat lacus quis aliquet dapibus. Sed venenatis turpis quis neque egestas porttitor.</small>
+              TOP SERVICES
             </h2>
           </div>
+          <div class='row'>
+            <div class='col-sm-12'>
+              <p class='lead lead-xs text-center'>
+              <br/>
+              Academia Translations specialises in Spanish > English and English > Spanish translation. <br/>
+              </p>
+
+            </div>
+          </div>
         </div>
+
+        <div class="col-xs-12 col-sm-6">
+          <div class="panel-group accordion" id="accordion">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a class="accordion-toggle" data-parent="#accordion" data-toggle="collapse" href="#accordion-item-1" aria-expanded="true">
+                    Spanish
+                  </a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse in" id="accordion-item-1" aria-expanded="true">
+                <div class="panel-body">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu justo vitae odio rhoncus pulvinar. Morbi ac congue orci. Nulla tristique ultrices purus vel egestas. Aliquam viverra volutpat facilisis. Vestibulum ante ipsum primis dapibus.
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a class="accordion-toggle collapsed" data-parent="#accordion" data-toggle="collapse" href="#accordion-item-2" aria-expanded="false">
+                    English
+                  </a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse" id="accordion-item-2" aria-expanded="false">
+                <div class="panel-body">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu justo vitae odio rhoncus pulvinar. Morbi ac congue orci. Nulla tristique ultrices purus vel egestas. Aliquam viverra volutpat facilisis. Vestibulum ante ipsum primis dapibus.
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a class="accordion-toggle collapsed" data-parent="#accordion" data-toggle="collapse" href="#accordion-item-3" aria-expanded="false">
+                    Portuguese
+                  </a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse" id="accordion-item-3" aria-expanded="false">
+                <div class="panel-body">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu justo vitae odio rhoncus pulvinar. Morbi ac congue orci. Nulla tristique ultrices purus vel egestas. Aliquam viverra volutpat facilisis. Vestibulum ante ipsum primis dapibus.
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a class="accordion-toggle collapsed" data-parent="#accordion" data-toggle="collapse" href="#accordion-item-3" aria-expanded="false">
+                    German
+                  </a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse" id="accordion-item-3" aria-expanded="false">
+                <div class="panel-body">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu justo vitae odio rhoncus pulvinar. Morbi ac congue orci. Nulla tristique ultrices purus vel egestas. Aliquam viverra volutpat facilisis. Vestibulum ante ipsum primis dapibus.
+                </div>
+              </div>
+            </div>
+          </div>
       </div>
+
+        <div class="col-xs-12 col-sm-6">
+          <div class="panel-group accordion" id="accordion">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a class="accordion-toggle" data-parent="#accordion" data-toggle="collapse" href="#accordion-item-1" aria-expanded="true">
+                    French
+                  </a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse in" id="accordion-item-4" aria-expanded="true">
+                <div class="panel-body">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu justo vitae odio rhoncus pulvinar. Morbi ac congue orci. Nulla tristique ultrices purus vel egestas. Aliquam viverra volutpat facilisis. Vestibulum ante ipsum primis dapibus.
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a class="accordion-toggle collapsed" data-parent="#accordion" data-toggle="collapse" href="#accordion-item-2" aria-expanded="false">
+                    Italian
+                  </a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse" id="accordion-item-5" aria-expanded="false">
+                <div class="panel-body">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu justo vitae odio rhoncus pulvinar. Morbi ac congue orci. Nulla tristique ultrices purus vel egestas. Aliquam viverra volutpat facilisis. Vestibulum ante ipsum primis dapibus.
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a class="accordion-toggle collapsed" data-parent="#accordion" data-toggle="collapse" href="#accordion-item-3" aria-expanded="false">
+                    Catalan
+                  </a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse" id="accordion-item-6" aria-expanded="false">
+                <div class="panel-body">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu justo vitae odio rhoncus pulvinar. Morbi ac congue orci. Nulla tristique ultrices purus vel egestas. Aliquam viverra volutpat facilisis. Vestibulum ante ipsum primis dapibus.
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a class="accordion-toggle collapsed" data-parent="#accordion" data-toggle="collapse" href="#accordion-item-3" aria-expanded="false">
+                    Latin
+                  </a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse" id="accordion-item-6" aria-expanded="false">
+                <div class="panel-body">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu justo vitae odio rhoncus pulvinar. Morbi ac congue orci. Nulla tristique ultrices purus vel egestas. Aliquam viverra volutpat facilisis. Vestibulum ante ipsum primis dapibus.
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+
       <div class='row'>
         <div class='col-sm-12'>
           <div class='page-header page-header-with-icon'>
@@ -39,8 +164,8 @@
                   <i class='fa fa-truck text-white'></i>
                 </div>
                 <div class='content'>
-                  <h3 class='title'>Shipping</h3>
-                  <p>Curabitur id ante at diam consectetur mattis. Donec tristique est turpis, et dapibus odio accumsan non. Donec rutrum sodales interdum.</p>
+                  <h3 class='title'>academia </h3>
+                  <p>doctoral theses, research proposals, reports and abstracts, journal articles</p>
                 </div>
               </div>
               <div class='col-sm-6 icon-box'>
@@ -48,7 +173,25 @@
                   <i class='fa fa-wrench text-white'></i>
                 </div>
                 <div class='content'>
-                  <h3 class='title'>Technical support</h3>
+                  <h3 class='title'>Technical Translation</h3>
+                  <p>Nulla consectetur turpis a ante tristique feugiat. In venenatis pellentesque leo vehicula consequat. Maecenas elementum velit ut leo imperdiet vehicula.</p>
+                </div>
+              </div>
+              <div class='col-sm-6 icon-box'>
+                <div class='icon icon-wrap icon-circle icon-lg contrast-bg'>
+                  <i class='fa fa-wrench text-white'></i>
+                </div>
+                <div class='content'>
+                  <h3 class='title'>Financial Translation </h3>
+                  <p>Nulla consectetur turpis a ante tristique feugiat. In venenatis pellentesque leo vehicula consequat. Maecenas elementum velit ut leo imperdiet vehicula.</p>
+                </div>
+              </div>
+              <div class='col-sm-6 icon-box'>
+                <div class='icon icon-wrap icon-circle icon-lg contrast-bg'>
+                  <i class='fa fa-wrench text-white'></i>
+                </div>
+                <div class='content'>
+                  <h3 class='title'>Legal Translation </h3>
                   <p>Nulla consectetur turpis a ante tristique feugiat. In venenatis pellentesque leo vehicula consequat. Maecenas elementum velit ut leo imperdiet vehicula.</p>
                 </div>
               </div>
@@ -59,7 +202,7 @@
                   <i class='fa fa-tag text-white'></i>
                 </div>
                 <div class='content'>
-                  <h3 class='title'>Warranty</h3>
+                  <h3 class='title'>Medical Translation</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sed massa quis elit sagittis tempor. Ut rutrum sem vel augue rhoncus vestibulum.</p>
                 </div>
               </div>
@@ -68,7 +211,25 @@
                   <i class='fa fa-shield text-white'></i>
                 </div>
                 <div class='content'>
-                  <h3 class='title'>Security</h3>
+                  <h3 class='title'>Commercial Translation</h3>
+                  <p>Cras aliquam accumsan lorem, ac cursus orci molestie eget. Ut nec ultricies augue. Vestibulum lobortis enim felis, non semper arcu convallis at.</p>
+                </div>
+              </div>
+              <div class='col-sm-6 icon-box'>
+                <div class='icon icon-wrap icon-circle icon-lg contrast-bg'>
+                  <i class='fa fa-shield text-white'></i>
+                </div>
+                <div class='content'>
+                  <h3 class='title'>marketing translation</h3>
+                  <p>Cras aliquam accumsan lorem, ac cursus orci molestie eget. Ut nec ultricies augue. Vestibulum lobortis enim felis, non semper arcu convallis at.</p>
+                </div>
+              </div>
+              <div class='col-sm-6 icon-box'>
+                <div class='icon icon-wrap icon-circle icon-lg contrast-bg'>
+                  <i class='fa fa-shield text-white'></i>
+                </div>
+                <div class='content'>
+                  <h3 class='title'>marketing translation</h3>
                   <p>Cras aliquam accumsan lorem, ac cursus orci molestie eget. Ut nec ultricies augue. Vestibulum lobortis enim felis, non semper arcu convallis at.</p>
                 </div>
               </div>
@@ -107,8 +268,8 @@
               <div class='col-sm-6'><img class="img-responsive center-block" alt="Lorem ipsum dolor sit amet" width="340" height="188" src="http://placehold.it/340x188" /></div>
               <div class='col-sm-6'>
                 <h3 class='title'><a href="#">Lorem ipsum dolor sit amet</a></h3>
-                <p>Mauris at ultricies eros. Morbi vel dui nec arcu suscipit euismod. Phasellus pellentesque lectus eget quam ullamcorper consectetur. Vestibulum vitae risus a erat mollis lac in venenatis tellus. Morbi et tristique lacus.</p>
-                <a class='btn btn-contrast btn-bordered btn-sm' href='#'>Read more</a>
+                <p>Translations may be certified and legalised as requested.</p>
+
               </div>
             </div>
             <hr>
@@ -116,8 +277,7 @@
               <div class='col-sm-6 col-sm-push-6'><img class="img-responsive center-block" alt="Praesent vitae adipiscing nunc" width="330" height="183" src="http://placehold.it/330x183" /></div>
               <div class='col-sm-6 col-sm-pull-6'>
                 <h3 class='title'><a href="#">Praesent vitae adipiscing nunc</a></h3>
-                <p>Integer fringtilla fringilla mauris eget accumsan. Nullam quis consequat ipsum, eu cursus mi. Donec quis quam at risus viverra venenatis. Phasellus non nulla tortor. Fusce congue enim sed ullamcorper cursus. Donec tincidunt elit sed felis iaculis laoreet.</p>
-                <a class='btn btn-contrast btn-bordered btn-sm' href='#'>Read more</a>
+                <p>All translations are carried out by first class linguists with experience in the field for which they are translating. We treat all documents sent to us with the utmost confidentiality and all of our translators sign non-disclosure agreements. For more information or if you have any questions, please contact us.</p>
               </div>
             </div>
           </div>
