--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -73,7 +73,10 @@
                 <div class='row'>
                   <div class='col-sm-12'>
                     <div class='client-slideshow cycle-slideshow' data-cycle-carousel-fluid='true' data-cycle-fx='carousel' data-cycle-timeout='2000'>
-                      <img alt="" width="140" height="33" src="http://placehold.it/140x33" />
+                      <img alt="" height="90" src='<%= image_path 'at/santander.jpg'%>' />
+                      <img alt="" height="70" src='<%= image_path 'at/ceigram.jpg'%>' />
+                      <img alt="" height="90" src='<%= image_path 'at/universidad_autonoma.jpg'%>' />
+
                       <img alt="" width="140" height="33" src="http://placehold.it/140x33" />
                       <img alt="" width="140" height="26" src="http://placehold.it/140x26" />
                       <img alt="" width="139" height="32" src="http://placehold.it/139x32" />
