--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -60,7 +60,7 @@
                   <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='contact.html'>
                   <a href="/contact.html">
                     <span>
-                      Portfolio
+                      Contact
                     </span>
                     </a>
                   </a>
