--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,7 @@
                 <div class='logo-container'>
                   <a >
                     <%= link_to root_path, class: "navbar-wagon-brand padded" do %>
-                      <%= image_tag "at/logo_at.png" %>
+                      <%= image_tag "at/Academia.png" %>
                       <% end %>
                   </a>
                 </div>
