--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
               </button>
               <a >
                 <%= link_to root_path, class: "navbar-wagon-brand padded" do %>
-                  <%= image_tag "at/logo_at.png" %>
+                  <%= image_tag "at/Academia.png" %>
                   <% end %>
               </a>
 
@@ -34,33 +34,24 @@
                   <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='services/comming_soon.html'>
                     <span>
                       Services
-                      <i class='fa fa-angle-down'></i>
                     </span>
                   </a>
-                  <ul class='dropdown-menu' role='menu'>
-                    <li class=''>
-                      <a href='/services.html'>services</a>
-                    </li>
-                    <li class=''>
-                      <a href='/services/comming_soon.html'>comming soon</a>
-                    </li>
-                  </ul>
-                </li>
+                </a>
                 <li class='dropdown'>
-                  <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='blog.html'>
-                    <a href="/blog.html">
+                  <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='media.html'>
+                    <a href="/media.html">
                     <span>
-                      Blog
+                      Media
 
                     </span>
                     </a>
                   </a>
                 </li>
                 <li class='dropdown'>
-                  <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='contact.html'>
-                  <a href="/contact.html">
+                  <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='blog.html'>
+                  <a href="/blog.html">
                     <span>
-                      Contact
+                      Blog
                     </span>
                     </a>
                   </a>
